trying to fix the vh issue on mobile

--- a/src/pages/CheatSheets/Css/Flexbox/FlexboxCheatSheet.styles.css
+++ b/src/pages/CheatSheets/Css/Flexbox/FlexboxCheatSheet.styles.css
@@ -49,7 +49,10 @@
     align-content: center;
     align-items: center;
     justify-content: center;
-    height: 100%;
+    height: calc(
+      var(--vh, 1vh) * 100 - var(--header-mobile-height) -
+        (var(--button-actionable-mobile-height) * 2) - 1.2rem
+    );
   }
 }
 
